--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,9 @@ body{
     max-width: 100%;
     overflow-x: hidden;
 }
+.welcome{
+  font-size: 20px 15px;
+}
 .border{
     padding: 80px 50px;
     width: 400px;
@@ -12,6 +15,72 @@ body{
 }
 .h3{
     color: #5b88a4;
+}
+.question{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.answers {
+  margin-bottom: 20px;
+  text-align: left;
+  display: inline-block;
+}
+.answers label{
+  display: block;
+  margin-bottom: 10px;
+}
+button{
+	font-size: 22px;
+	background-color: #279;
+	color: #fff;
+	border: 0px;
+	border-radius: 3px;
+	padding: 20px;
+	cursor: pointer;
+	margin-bottom: 20px;
+}
+button:hover{
+	background-color: #38a;
+}
+
+.slide{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.active-slide{
+  opacity: 1;
+  z-index: 2;
+}
+.quiz-container{
+  position: relative;
+  height: 200px;
+  margin-top: 40px;
+}
+.navigation a {
+  float:inline-end;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  font-size: 17px;
+  background-color: #004868;
+}
+.navigation{
+  float:inline-end;
+  background-color: #004868;
+  color:#FFFFFF;
+  padding: 14px 16px;
+  font-size: 17px;
+}
+.navigation a:hover{
+  background-color:#236B8E;
+}
+.navigation a.active{
+  background-color: #530d2b;
 }
 .btn {
     padding: 10px 40px;
