--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,25 @@
 		<div align="center">
             <img src="{{url_for('static', filename='Tutor.jpeg')}}" width="100" height="100"/>
             <br><br>
-			<div class="header">
-				<h1 class="word">Welcome</h1>
-			</div></br></br></br>
-				<h1>
-					{{session.username}}</br></br> Welcome to TutorHive...</br>We look forward to recieving your application			
-				</h1></br></br></br>
-                <p class="bottom">Your dashboard awaits. <a class="bottom" href="{{url_for('profile')}}">Go to dashboard</a></p>
-                <br><br>
-				<a href="{{ url_for('sign_out') }}" class="btn">Logout</a>
 		</div>
+		<br><br>
+		<div class="navigation" align="center">
+			<div class="options">
+				<a href="{{ url_for('profile') }}">Profile</a>
+				<a href="{{ url_for('quiz') }}">Quiz</a>
+				<a href="{{ url_for('opportunities') }}">Job Opportunities</a>
+				<a href="{{ url_for('sign_out') }}">Logout</a>
+			</div>
+		</div>
+		<br><br>
+		<h1 align="center">
+			Hi there, {{session.username}}</br></br> Welcome to TutorHive...</br>We look forward to recieving your application			
+		</h1>
+		</br></br></br>
+		<p class="bottom" align="center">Your dashboard awaits. <a class="bottom" href="{{url_for('profile')}}">Go to dashboard</a></p>
+		<br><br>
+		<div align="center">
+			<a href="{{ url_for('sign_out') }}" class="btn">Logout</a>
 		</div>
 	</body>
 </html>
