--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -19,7 +19,7 @@
         </div>
         <div class="sideNavContainer">
             <div class="sideNavTabs">
-                <a href="{{ url_for('profile') }}" class="active">Dashboard</a>
+                <a href="{{ url_for('profile') }}">Dashboard</a>
                 <a href="{{ url_for('highPResults') }}">Personality Test Results</a>
                 <a href="{{ url_for('highKResults') }}">Knowledge Test Results</a>
                 <a href="{{ url_for('studentinfo') }}">Fill in details and document submission</a>
@@ -27,10 +27,8 @@
                 <a href="{{ url_for('notification') }}">Notifications</a>
             </div>
         </div>
-        <div class="information">
-            <p>Name: {{session.username}}</p>
-            <p>University: Durban University of Technology</p>
-            <p>Role: Student</p>
+        <div class="confirm">
+            <h1>msg</h1>
         </div>
     </body>
 </html>
