--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,15 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">					
 	</head>
 	<body>
-        </br></br></br>
-		<div align="center">
-            <img src="{{url_for('static', filename='Tutor.jpeg')}}" width="100" height="100"/>
-            <br><br>
+        </br>
+		<div class="logo">
+            <img src="{{url_for('static', filename='Tutor.jpeg')}}" alt="logo"/>
 		</div>
 		<br><br>
-		<div class="navigation" align="center">
-			<div class="options">
+		<div class="TopNavigation">
+			<div class="tabs">
 				<a href="{{ url_for('profile') }}">Profile</a>
 				<a href="{{ url_for('quiz') }}">Quiz</a>
-				<a href="{{ url_for('opportunities') }}">Job Opportunities</a>
 				<a href="{{ url_for('sign_out') }}">Logout</a>
 			</div>
 		</div>
@@ -24,7 +22,7 @@
 			Hi there, {{session.username}}</br></br> Welcome to TutorHive...</br>We look forward to recieving your application			
 		</h1>
 		</br></br></br>
-		<p class="bottom" align="center">Your dashboard awaits. <a class="bottom" href="{{url_for('profile')}}">Go to dashboard</a></p>
+		<p class="bottom" align="center">Your dashboard awaits. <a class="bottomLink" href="{{url_for('profile')}}">Go to dashboard</a></p>
 		<br><br>
 		<div align="center">
 			<a href="{{ url_for('sign_out') }}" class="btn">Logout</a>
