--- a/templates/personality_quiz.html
+++ b/templates/personality_quiz.html
@@ -1,194 +1,182 @@
 <html>
     <head>
-        <meta charset="UTF-8">
-		<title>Personality Quiz</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+      <meta charset="UTF-8">
+      <title>Personality Quiz</title>
+      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
-        <header>
-            <div class="logo">
-                <img src="{{url_for('static', filename='Tutor.jpeg')}}" 
-                width="100" height="100"
-                class="menu"
-                id="menu"
-                alt="menu-icon">
-            </div>
-        </header>
+        </br>
+        <div class="logo">
+            <img src="{{url_for('static', filename='Tutor.jpeg')}}" alt="logo"/>
+        </div>
         <br><br>
-        <div class="navigation" align="center">
-            <div class="options">
-                <a href="{{ url_for('profile') }}">Profile</a>
+        <div class="TopNavigation">
+            <div class="tabs">
+                <a href="{{ url_for('profile') }}" class="active">Profile</a>
                 <a href="{{ url_for('quiz') }}">Quiz</a>
-                <a href="{{ url_for('opportunities') }}">Job Opportunities</a>
                 <a href="{{ url_for('sign_out') }}">Logout</a>
             </div>
         </div>
-        <br><br>
-        <div class="message" align="center">
-            <h2>Welcome to the Personality Quiz</h2>
-            <h3>Wishing you all the best</h3>
+        <div class="sideNavContainer">
+            <div class="sideNavTabs">
+                <a href="{{ url_for('profile') }}">Dashboard</a>
+                <a href="{{ url_for('highPResults') }}">Personality Test Results</a>
+                <a href="{{ url_for('highKResults') }}">Knowledge Test Results</a>
+                <a href="{{ url_for('studentinfo') }}">Fill in details and document submission</a>
+                <a href="{{ url_for('email') }}">Complaints/Queries</a>
+                <a href="{{ url_for('notification') }}">Notifications</a>
+            </div>
         </div>
-        <br><br>
-        <h1 align="center">Personality Quiz</h1>
-        <div class="quiz-container" align="center">
-            <div id="quiz"></div>
+        <div class="title">
+            <h1>Personality Quiz</h1>
         </div>
-        <button id="previous" align="center">Previous Question</button>
-        <button id="next" align="center">Next Question</button>
-        <button id="submit" align="center">Submit Quiz</button>
-        <div id="results" align="center"></div>
+        <div class="logo">
+            <img src="{{url_for('static', filename='Personality.jpg')}}" alt="Personality">
+        </div>
+        <br>
+        <div class="container">
+            <div id="game" class="justify-center flex-column">
+                <div id="display">
+                    <div class="display-item">
+                        <h1 id="progress" class="display-prefix">
+                            Question
+                        </h1>
+                        <div id="progressBar">
+                            <div id="progressBarFull"></div>
+                        </div>
+                    </div>
+                    <div class="display-item">
+                        <p class="display-prefix">
+                            Result
+                        </p>
+                        <h1 class="display-main-text" id="resultText">
+                            0
+                        </h1>
+                    </div>
+                </div>
+                <h1 id="question">Do you consider yourself empathetic?</h1>
+                <div class="choice-container">
+                    <p class="choice-prefix">A</p>
+                    <p class="choiceText" data-number="1">Choice 1</p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">B</p>
+                    <p class="choiceText" data-number="2">Choice 2</p>
+                </div>
+            </div>
+        </div>
+        <script>
+            const question = document.querySelector('#question');
+            const choices = Array.from(document.querySelectorAll('.choiceText'));
+            const progress= document.querySelector('#progress');
+            const resultText= document.querySelector('#resultText');
+            const progressBarFull= document.querySelector('#progressBarFull');
+        
+            let currentQuestion = {};
+            let acceptingAnswers = true;
+            let result = 0;
+            let questionCounter = 0;
+            let availableQuestions = [];
+        
+            let questions = [
+                {
+                    question: "Are you empathetic toward others?",
+                    choice1: "Yes",
+                    choice2: "No",
+                    answer: 1,
+                },
+                {
+                    question: "Are you patient?",
+                    choice1: "Yes",
+                    choice2: "No",
+                    answer: 1,
+                },
+                {
+                    question: "Do you consider yourself to be flexible, dynamic and open to changes?",
+                    choice1: "Yes",
+                    choice2: "No",
+                    answer: 1,
+                },
+                {
+                    question: "Are you self-disciplined?",
+                    choice1: "Yes",
+                    choice2: "No",
+                    answer: 1,
+                },
+                {
+                    question: "Do you have good communication skills?",
+                    choice1: "Yes",
+                    choice2: "No",
+                    answer: 1,
+                },
+                {
+                    question: "Do you have a high Emotional IQ?",
+                    choice1: "Yes",
+                    choice2: "No",
+                    answer: 1,
+                }
+            ];
+        
+            const POINTS = 1;
+            const MAX_Questions = 6;
+
+            startQuiz = () => {
+                questionCounter = 0;
+                result = 0;
+                availableQuestions=[...questions];
+                getNewQuestions();
+            }
+            getNewQuestions = () => {
+                if(availableQuestions.length === 0 || questionCounter > MAX_Questions){
+                    localStorage.setItem('Recent Result', result)
+
+                    return window.location.assign("{{ url_for('end') }}");
+                }
+                questionCounter++;
+                progress.innerText = `Question ${questionCounter} of ${MAX_Questions}`;
+                progressBarFull.style.width = `${(questionCounter/MAX_Questions) * 100}%`;
+
+                const questionIndex = Math.floor(Math.random() * availableQuestions.length);
+                currentQuestion = availableQuestions[questionIndex];
+                question.innerText = currentQuestion.question;
+
+                choices.forEach(choice => {
+                    const number = choice.dataset['number'];
+                    choice.innerText = currentQuestion['choice' + number];
+                })
+
+                availableQuestions.splice(questionIndex, 1);
+
+                acceptingAnswers = true;
+            }
+
+            choices.forEach(choice => {
+                choice.addEventListener('click', e => {
+                    if(!acceptingAnswers) return 
+
+                    acceptingAnswers = false;
+                    const selectedChoice = e.target;
+                    const selectedAnswer = selectedChoice.dataset['number'];
+
+                    let classToApply = selectedAnswer  == currentQuestion.answer ? 'correct' : 'incorrect'
+
+                    if (classToApply === 'correct'){
+                        incrementResult(POINTS);
+                    }
+
+                    selectedChoice.parentElement.classList.add(classToApply);
+
+                    setTimeout(() => {
+                        selectedChoice.parentElement.classList.remove(classToApply);
+                        getNewQuestions();
+                    }, 1000)
+                })
+            })
+            incrementResult = num => {
+                result += num;
+                resultText.innerText = ((result/MAX_Questions)*100);
+            }
+            startQuiz()
+        </script>
     </body>
 </html>
-<script>
-    const myQuestions = [
-    {
-        question: "Do you consider yourself empathetic?",
-        answers: {
-            a: "Yes",
-            b: "No"
-        },
-        correctAnswer: "a"
-    },
-    {
-        question: "Do you consider yourself an honest individual?",
-        answers: {
-            a: "No",
-            b: "Yes"
-        },
-        correctAnswer: "b"
-    },
-    {
-        question: "Are you enthusiatic in whatever you do?",
-        answers: {
-            a: "Yes",
-            b: "No"
-        },
-        correctAnswer: "a"
-    }
-    ];
-
-    (function(){
-  // Functions
-  function buildQuiz(){
-    // variable to store the HTML output
-    const output = [];
-
-    // for each question...
-    myQuestions.forEach(
-      (currentQuestion, questionNumber) => {
-
-        // variable to store the list of possible answers
-        const answers = [];
-
-        // and for each available answer...
-        for(letter in currentQuestion.answers){
-
-          // ...add an HTML radio button
-          answers.push(
-            `<label>
-              <input type="radio" name="question${questionNumber}" value="${letter}">
-              ${letter} :
-              ${currentQuestion.answers[letter]}
-            </label>`
-          );
-        }
-
-        // add this question and its answers to the output
-        output.push(
-          `<div class="slide">
-            <div class="question"> ${currentQuestion.question} </div>
-            <div class="answers"> ${answers.join("")} </div>
-          </div>`
-        );
-      }
-    );
-
-    // finally combine our output list into one string of HTML and put it on the page
-    quizContainer.innerHTML = output.join('');
-  }
-
-  function showResults(){
-
-    // gather answer containers from our quiz
-    const answerContainers = quizContainer.querySelectorAll('.answers');
-
-    // keep track of user's answers
-    let numCorrect = 0;
-
-    // for each question...
-    myQuestions.forEach( (currentQuestion, questionNumber) => {
-
-      // find selected answer
-      const answerContainer = answerContainers[questionNumber];
-      const selector = `input[name=question${questionNumber}]:checked`;
-      const userAnswer = (answerContainer.querySelector(selector) || {}).value;
-
-      // if answer is correct
-      if(userAnswer === currentQuestion.correctAnswer){
-        // add to the number of correct answers
-        numCorrect++;
-
-        // color the answers green
-        answerContainers[questionNumber].style.color = 'lightgreen';
-      }
-      // if answer is wrong or blank
-      else{
-        // color the answers red
-        answerContainers[questionNumber].style.color = 'red';
-      }
-    });
-
-    // show number of correct answers out of total
-    resultsContainer.innerHTML = `${numCorrect} out of ${myQuestions.length}`;
-  }
-
-  function showSlide(n) {
-    slides[currentSlide].classList.remove('active-slide');
-    slides[n].classList.add('active-slide');
-    currentSlide = n;
-    if(currentSlide === 0){
-      previousButton.style.display = 'none';
-    }
-    else{
-      previousButton.style.display = 'inline-block';
-    }
-    if(currentSlide === slides.length-1){
-      nextButton.style.display = 'none';
-      submitButton.style.display = 'inline-block';
-    }
-    else{
-      nextButton.style.display = 'inline-block';
-      submitButton.style.display = 'none';
-    }
-  }
-
-  function showNextSlide() {
-    showSlide(currentSlide + 1);
-  }
-
-  function showPreviousSlide() {
-    showSlide(currentSlide - 1);
-  }
-
-  // Variables
-  const quizContainer = document.getElementById('quiz');
-  const resultsContainer = document.getElementById('results');
-  const submitButton = document.getElementById('submit');
-
-  buildQuiz();
-
-  // Pagination
-  const previousButton = document.getElementById("previous");
-  const nextButton = document.getElementById("next");
-  const slides = document.querySelectorAll(".slide");
-  let currentSlide = 0;
-
-  // Show the first slide
-  showSlide(currentSlide);
-
-  // Event listeners
-  submitButton.addEventListener('click', showResults);
-  previousButton.addEventListener("click", showPreviousSlide);
-  nextButton.addEventListener("click", showNextSlide);
-})();
-</script>
