--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -5,33 +5,34 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">			
     </head>
     <body>
-        </br></br></br>
-        <div align="center">
-            <img src="{{url_for('static', filename='Tutor.jpeg')}}" width="100" height="100"/>
-            <br><br>
+        </br>
+        <div class="logo">
+            <img src="{{url_for('static', filename='Tutor.jpeg')}}" alt="logo"/>
         </div>
         <br><br>
-        <div class="navigation" align="center">
-            <div class="options">
+        <div class="TopNavigation">
+            <div class="tabs">
                 <a href="{{ url_for('profile') }}">Profile</a>
                 <a href="{{ url_for('quiz') }}" class="active">Quiz</a>
-                <a href="{{ url_for('opportunities') }}">Job Opportunities</a>
                 <a href="{{ url_for('sign_out') }}">Logout</a>
             </div>
         </div>
         <br><br>
-        <div class="welcome" align="center">
-            <p>Hi {{session.username}}</p>
-            <p>Below is a set of quizzes you must get a total of 75% to be shortlisted for any tutor or TA position you apply to</p>
+        <div class="msg">
+            Hi {{session.username}}, please do the following quizzes, so that you can see the job opportunities.
         </div>
         <br><br>
-        <div class="buttons">
-            <div class="personality_button" align="center">
-                <button><a href="{{ url_for('personality_quiz') }}">Personality Quiz</a></button>
-            </div>
-            <div class="knowledge_button" align="center">
-                <button><a href="{{ url_for('knowledge_quiz') }}">Knowledge Quiz</a></button>
-            </div>
+        <div class="types-of-quizzes">
+            <button>
+                <img src="{{url_for('static', filename='Personality.jpg')}}" alt="Personality">
+                <br>
+                <a href="{{ url_for('personality_quiz') }}">Personality Quiz</a>
+            </button>
+            <button>
+                <img src="{{url_for('static', filename='knowledge.jpg')}}" alt="knowledge">
+                <br>
+                <a href="{{ url_for('knowledge_quiz') }}">Knowledge Quiz</a>
+            </button>
         </div>
     </body>
 </html>
