--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -5,25 +5,27 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">		
 	</head>
 	<body>
-        </br></br></br></br></br>
-		<div align="center">
-            <img src="{{url_for('static', filename='Tutor.jpeg')}}" width="100" height="100"/>
-            <h1>Welcome to TutorHive</h1>
-            <br/>
-			<div class="header">
-				<h2 class="word">Sign into your account</h2>
-			</div></br></br></br>
-			<h2 class="word">
-				<form action="{{ url_for('sign_in') }}" method="post">
-				<div class="msg">{{ msg }}</div>
-                <br>
-					<input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox"/></br></br>
-					<input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox"/></br></br></br>
-					<input type="submit" class="btn" value="Sign In"></br></br>
-				</form>
-			</h2>
-			<p class="bottom">Need an account? <a class="bottom" href="{{url_for('register')}}">Create one here</a></p>
+        </br></br>
+		<div class="logo">
+            <img src="{{url_for('static', filename='Tutor.jpeg')}}" alt="logo"/>
 		</div>
+		<div class="welcome">
+			<h1>Welcome to TutorHive</h1>
 		</div>
+		<br/>
+		<div class="header">
+			<h2 class="word" align="center">Sign into your account</h2>
+		</div>
+		</br>
+		<h2 class="word">
+			<form action="{{ url_for('sign_in') }}" method="post" align="center">
+			<div class="msg">{{ msg }}</div>
+			<br>
+				<input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox"/></br></br>
+				<input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox"/></br></br></br>
+				<input type="submit" class="btn" value="Sign In"></br></br>
+			</form>
+		</h2>
+		<p class="bottom">Need an account? <a class="bottomLink" href="{{url_for('register')}}">Create one here</a></p>
 	</body>
 </html>
