--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,12 @@
             <img src="{{url_for('static', filename='Tutor.jpeg')}}" alt="logo"/>
 		</div>
 		<br><br>
+		<div class="msg">{{ msg }}</div>
+		<br><br>
 		<div class="TopNavigation">
 			<div class="tabs">
 				<a href="{{ url_for('profile') }}">Profile</a>
-				<a href="{{ url_for('quiz') }}">Quiz</a>
+				<a href="{{ url_for('jobs') }}">Opportunities</a>
 				<a href="{{ url_for('sign_out') }}">Logout</a>
 			</div>
 		</div>
