--- a/templates/recieved.html
+++ b/templates/recieved.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-		<title> Dashboard </title>
+		<title> Congratulations </title>
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
@@ -18,19 +18,11 @@
             </div>
         </div>
         <br><br>
-        <div class="sideNavContainer">
-            <div class="sideNavTabs">
-                <a href="{{ url_for('profile') }}" class="active">Dashboard</a><br>
-                <a href="{{ url_for('studentinfo') }}">Fill in details and document submission</a><br>
-                <a href="{{ url_for('email') }}">Complaints/Queries</a><br>
-            </div>
+        <div class="msg">
+            <h1>We have recieved your application, we will get back to you soon!</h1>
         </div>
-        <br>
-        <div class="info">
-            <h3>
-                Name: {{session.username}}<br>
-                University: Durban University of Technology
-            </h3>
+        <div class="back">
+            <a href="{{ url_for('profile') }}">Go home</a>
         </div>
     </body>
 </html>
