--- a/templates/register.html
+++ b/templates/register.html
@@ -2,31 +2,37 @@
 	<head>
 		<meta charset="UTF-8">
 		<title> Register </title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">			
+		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">	
 	</head>
-	<body></br>
+	<body>
 		<div align="center">
-            <img src="{{url_for('static', filename='Tutor.jpeg')}}" width="100" height="100"/>
-            <br><br>
-            <h1>Welcome to TutorHive</h1>
-			<div class="header">
-				<h1 class="word">Register</h1>
+			<div class="logo">
+				<img src="{{url_for('static', filename='Tutor.jpeg')}}" alt="logo"/>
 			</div>
-			<h2 class="word">
-				<form action="{{ url_for('register') }}" method="post">
+		</div>
+		<div class="welcome">
+			<h1>Welcome to TutorHive</h1>
+		</div>
+		<br/>
+		<div class="header">
+			<h2>Register</h2>
+		</div>
+		<h2 class="word">
+			<form action="{{ url_for('register') }}" method="post" align="center">
 				<div class="msg">{{ msg }}</div>
                 <br>
 					<div class="inputs">
 						<input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox"/></br></br>
 						<input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox"/></br></br>
 						<input id="email" name="email" type="text" placeholder="Enter Your Email address" class="textbox"/></br></br>
-						<input type="submit" class="btn" value="Sign Up"></br>
+						<input type="submit" class="btn" value="Sign Up"></br></br>
 					</div>
-				</form>
-			</h2>
-            <br><br>
-			<p class="bottom">Already have an account? <a class="bottomLink" href="{{url_for('sign_in')}}"> Sign In here</a></p>
-		</div>
-		</div>
+			</form>
+		</h2>
+		<br><br>
+		<div class="text-center">
+			Already have an account? 
+			<a class="bottomLink" href="{{url_for('sign_in')}}">Sign in here</a>
+		</div>		
 	</body>
 </html>
